Revert "pagination + some warnings (#37)"
This reverts commit c3e9bc1e6a5267cb9870e5939288e6a730ab6238.