@@ -14,8 +14,6 @@ import com.example.airassist.util.PdfGenerator;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.transaction.Transactional;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.beans.factory.annotation.Value;
@@ -42,7 +40,7 @@ public class CaseFileServiceImpl implements CaseFileService {
     private final AirlineService airlineService;
     private final CaseFlightRepository caseFlightRepository;
     private final FlightService flightService;
-    private final MailSenderService mailSenderService;
+    private MailSenderService mailSenderService;
 
     @Value("${MIN_REWARD}")
     private int minReward;
@@ -75,6 +73,12 @@ public class CaseFileServiceImpl implements CaseFileService {
         this.caseFlightRepository = caseFlightRepository;
         this.flightService = flightService;
         this.mailSenderService = mailSenderService;
+    }
+
+    @Override
+    @Transactional
+    public List<CaseFile> findAllCaseFiles() {
+        return caseFileRepository.findAll();
     }
 
     @Override
@@ -268,10 +272,17 @@ public class CaseFileServiceImpl implements CaseFileService {
     }
 
     @Override
+    public List<CaseFileSummaryDTO> getAllCaseSummaries() {
+        List<CaseFile> cases = caseFileRepository.findAll();
+        return cases.stream().map(this::mapCaseFileToDTO)
+                .collect(Collectors.toList());
+    }
+
+    @Override
     public List<CaseFileSummaryDTO> getCaseSummariesByPassengerId(UUID passengerId) {
         List<CaseFile> cases = caseFileRepository.findAll().stream()
                 .filter(c -> c.getPassenger() != null && passengerId.equals(c.getPassenger().getId()))
-                .toList();
+                .collect(Collectors.toList());
         return cases.stream().map(this::mapCaseFileToDTO).collect(Collectors.toList());
     }
 
@@ -279,13 +290,6 @@ public class CaseFileServiceImpl implements CaseFileService {
     public CaseFile findCaseFileById(UUID caseId) {
         return caseFileRepository.findById(caseId)
                 .orElseThrow(() -> new RuntimeException("Case not found"));
-    }
-
-    @Override
-    public Page<CaseFileSummaryDTO> findAll(Pageable pageable) {
-        log.info("Finding all cases");
-        Page<CaseFile> cases = caseFileRepository.findAll(pageable);
-        return cases.map(this::mapCaseFileToDTO);
     }
 
     private String generateContractId(Timestamp caseDate) {
